fix an issue where slidng pannel dropdown options get cut off at the bottom.

--- a/packages/visual-stack/src/components/Filters.css
+++ b/packages/visual-stack/src/components/Filters.css
@@ -1,20 +1,3 @@
-.filter-options {
-    background-color: #EFF4F7;
-    width: 100%;
-    max-height: 0px;
-    z-index: 200;
-    transition: max-height 0.2s;
-    overflow: hidden;
-}
-
-.filter-options.active {
-    max-height: 100px;
-}
-
-.filter-options.active label {
-    color: #263238;
-}
-
 .filter-options input {
     margin-right: 5px;
 }
@@ -24,6 +7,6 @@
 }
 
 .filter-options .select-all,
-.filter-options .checkboxes{
+.filter-options .checkboxes {
     padding: 5px 15px;
 }
