--- a/packages/visual-stack/src/components/SlidingPanel.css
+++ b/packages/visual-stack/src/components/SlidingPanel.css
@@ -106,14 +106,14 @@ a.filter-container-label {
 .filter-options {
     background-color: #EFF4F7;
     width: 100%;
-    max-height: 0px;
+    max-height: 0;
     z-index: 200;
     transition: max-height 0.2s;
     overflow: hidden;
 }
 
 .filter-options.expanded {
-    max-height: 100px;
+    max-height: 100%;
 }
 
 .filter-options.expanded label {
